Edit by sibeesh

--- a/achemso-demo.tex
+++ b/achemso-demo.tex
@@ -166,12 +166,10 @@ camera is mounted with a blue dichroic filter to enhance the
 imaging. The patterns produced by the BZ reaction can be small and
 require high spatial-resolution imaging techniques to
 observe. Achieving sufficient resolution can be difficult, mainly if
-the patterns are small or occur in a three-dimensional space. We use a
-CCD camera with a maximum resolution of 640x480, and a user can choose
-the resolution according to their requirement.  The BZ reaction is
+the patterns are small or occur in a three-dimensional space. The CCD camera we use has a maximum resolution of 640x480 and a minimum resolution of 16x16. We use a resolution of 200x200 in our experiments. The BZ reaction is
 sensitive to changes in temperature, and imaging the reaction requires
-precise temperature control to ensure consistent behavior. Hence,
-experiments were performed in an AC room with an ambient temperature.
+precise temperature control to ensure consistent behavior. 
+%Hence,experiments were performed in an AC room with an ambient temperature.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Spiral or scroll waves can be anchored to inhomogeneities in the
@@ -193,8 +191,8 @@ constant current sources and programmable power supplies. The
 experimental system requires multiple devices to function together.
 Virtual instrumentation can effectively control such tasks. Virtual
 instrumentation refers to the use of software and computer technology
-to create and control virtual versions of physical instruments. 
-These virtual instruments can be used for various purposes, such as scientific research, engineering design, and industrial automation. Virtual instrumentation is a growing field and is increasingly used in various industries, including telecommunications, aerospace, and manufacturing.
+to create and control virtual versions of physical instruments \cite{singh2008implementation}. 
+These virtual instruments can be used for various purposes, such as scientific research, engineering design, and industrial automation. Virtual instrumentation is a growing field and is increasingly used in various industries, including telecommunications, aerospace, and manufacturing \cite{}.
 
 LabVIEW (Laboratory Virtual Instrument Engineering Workbench) is a
 graphical programming platform widely used for virtual
@@ -491,13 +489,12 @@ solution. To address this issue, a diffused white LED light source is
 placed below the reaction medium, and a blue dichroic filter is
 mounted on the camera to enhance imaging. Since the patterns can be
 small and occur in three-dimensional space, high spatial-resolution
-imaging techniques are required. A CCD camera with a maximum
-resolution of 640x480 is used. The user can adjust the required
-resolution by changing the image format control option available in NI
-Measurements and automation explorer (NI MAX). Furthermore, the BZ
+imaging techniques are required. We use a resolution of 200x200 in our experiments.
+%A CCD camera with a maximum resolution of 640x480 and a minimum resolution of 16x16 is used. 
+The user can adjust the required resolution by changing the image format control option available in NI Measurements and automation explorer (NI MAX). Furthermore, the BZ
 reaction is sensitive to temperature changes, and precise temperature
 control is necessary to ensure consistent behavior. Hence, experiments
-are performed in an AC room with a controlled ambient temperature.
+were performed at 25$^{\circ}$c.
 Unpinning studies use the application of low-voltage electric
 fields. Researchers continue to explore new ways to study the BZ
 reaction and its excitation wave dynamics using both DC and different
